k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: simple-go
  name: simple-go-svc
spec:
  ports:
  - name: 8000-8000
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: simple-go
  sessionAffinity: None
  type: ClusterIP
